# acer-swift-thermal-control

./: LINUX_BUILD.md  README.md  justfile  uninstall.sh
backend/: thermal-control.sh
cosmic-applet-acer-thermal/: Cargo.toml  install.sh
cosmic-applet-acer-thermal/data/: com.acer.CosmicAppletThermal.desktop
cosmic-applet-acer-thermal/src/: main.rs
