[package]
name = "cosmic-applet-acer-thermal"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = ["applet"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = "0.3"
